Some data model adjustments